Fix app-summary card spacing

--- a/src/components/AppSummary/_AppSummary.scss
+++ b/src/components/AppSummary/_AppSummary.scss
@@ -2,6 +2,7 @@
   &-card {
     padding-left: 32px;
     padding-right: 32px;
+    padding-bottom: 0;
   }
 
   &-wrapper {
